Modules:xinetd,logrotate,role,profile

--- a/puppet/puppet.conf
+++ b/puppet/puppet.conf
@@ -4,3 +4,16 @@
 # - https://docs.puppetlabs.com/puppet/latest/reference/config_about_settings.html
 # - https://docs.puppetlabs.com/puppet/latest/reference/config_file_main.html
 # - https://docs.puppetlabs.com/puppet/latest/reference/configuration.html
+[master]
+#vardir = /opt/puppetlabs/server/data/puppetserver
+vardir = /var/opt/puppetlabs/puppetserver
+ssldir = $vardir/ssl
+logdir = /var/log/puppetlabs/puppetserver
+rundir = /var/run/puppetlabs/puppetserver
+pidfile = /var/run/puppetlabs/puppetserver/puppetserver.pid
+codedir = /etc/puppetlabs/code
+
+[user]
+vardir = /var/opt/puppetlabs/puppetserver
+ssldir = $vardir/ssl
+
