--- a/puppet/puppet.conf
+++ b/puppet/puppet.conf
@@ -1,22 +1,27 @@
 # This file can be used to override the default puppet settings.
 # See the following links for more details on what settings are available:
-# - https://docs.puppetlabs.com/puppet/latest/reference/config_important_settings.html
-# - https://docs.puppetlabs.com/puppet/latest/reference/config_about_settings.html
-# - https://docs.puppetlabs.com/puppet/latest/reference/config_file_main.html
-# - https://docs.puppetlabs.com/puppet/latest/reference/configuration.html
+# - https://puppet.com/docs/puppet/latest/config_important_settings.html
+# - https://puppet.com/docs/puppet/latest/config_about_settings.html
+# - https://puppet.com/docs/puppet/latest/config_file_main.html
+# - https://puppet.com/docs/puppet/latest/configuration.html
+
 [master]
-#vardir = /opt/puppetlabs/server/data/puppetserver
-vardir = /opt/puppetlabs/server/data/puppetserver
-ssldir = $vardir/ssl
-logdir = /var/log/puppetlabs/puppetserver
-rundir = /var/run/puppetlabs/puppetserver
-pidfile = /var/run/puppetlabs/puppetserver/puppetserver.pid
-codedir = /etc/puppetlabs/code
+#  vardir = /opt/puppetlabs/server/data/puppetserver
+  vardir = /opt/puppetlabs/server/data/puppetserver
+  ssldir = $vardir/ssl
+  logdir = /var/log/puppetlabs/puppetserver
+  rundir = /var/run/puppetlabs/puppetserver
+  pidfile = /var/run/puppetlabs/puppetserver/puppetserver.pid
+  codedir = /etc/puppetlabs/code
+  certname = puppet1.mylabserver.com
 
 [user]
-vardir = /var/opt/puppetlabs/puppetserver
-ssldir = $vardir/ssl
+  vardir = /var/opt/puppetlabs/puppetserver
+  ssldir = $vardir/ssl
 
 [main]
-environmentpath = /etc/puppetlabs/code/environments
-basemodulepath = /etc/puppetlabs/code/modules
+  environmentpath = /etc/puppetlabs/code/environments
+  basemodulepath = /etc/puppetlabs/code/modules
+  certname = puppet1.mylabserver.com
+
+server = puppet1.mylabserver.com
